--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard</title>
     <!-- css styles -->
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/92a062d30f.js" crossorigin="anonymous"></script>
 </head>
